[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/character_rigged_animated3.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]

[sub_resource type="CapsuleMesh" id=2]

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 1, 1, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="CollisionShape"]
visible = false
mesh = SubResource( 2 )
material/0 = null

[node name="character_rigged_animated3" parent="CollisionShape" instance=ExtResource( 2 )]
transform = Transform( 0.4, 1.30337e-07, 6.33787e-08, -6.33787e-08, -6.51685e-08, 0.4, 1.30337e-07, -0.4, -6.51685e-08, 5.96046e-08, 1.62921e-07, 1 )

[node name="CameraAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.25, 0 )

[node name="Camera" type="Camera" parent="CameraAnchor"]
transform = Transform( 1, 0, 0, 0, 0.923297, 0.384086, 0, -0.384086, 0.923297, 1.27023, 1.90286, 5.42608 )
current = true

[node name="ComboTimer" type="Timer" parent="."]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
